syntax = "proto3";

package raftpb;

message RequestVoteArgs {
    uint64 term = 1;
    uint64 candidateId = 2;
}

message RequestVoteReply {
    uint64 term = 1;
    bool voteGranted = 2;
}

message AppendEntriesArgs {
    uint64 term = 1;
}

message AppendEntriesReply {
    uint64 term = 1;
}
